--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,29 @@ body {
   /* padding-bottom: 30px; */
 }
 
+.menu {
+  z-index: 99999999;
+}
+
+nav, .glass {
+    background: rgba(255, 255, 255, .6);
+    height: 88px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    border-bottom:none;
+    z-index: 10000000000;
+}
+
+.glass {
+    background: transparent;
+    overflow: hidden;
+    z-index: 10000;
+    background: #fff;
+    left: 0;
+}
+
+
 a img:hover {
 box-shadow: 0px 0px 5px #ddd;
 margin-top: -5px;
@@ -48,6 +71,10 @@ padding-right: 0px;
 
 .chopped-and-screwed{
       padding-top: 70px;
+}
+
+.three-o-five{
+      padding-top: 150px;
 }
 
 .theme-dropdown .dropdown-menu {
